added git ignore + firebase

--- a/pages/test.html
+++ b/pages/test.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <title>I am test page</title>
+    <link rel="stylesheet" type="txt/css" href="styles/styles.css" />
+    <script type="text/javascript" src="scripts/data.js"></script>
+    <script type="text/javascript" src="scripts/script.js"></script>
   </head>
   <body>
     <h1>Test page</h1>
